completes api documentation for user apis, minor fixes
